Fix z-index of notifications so they go over settings bar

--- a/public/css/bbgm-notifications.scss
+++ b/public/css/bbgm-notifications.scss
@@ -1,4 +1,6 @@
 .notification-container {
+	z-index: 1000;
+
 	ul,
 	li {
 		padding: 0;
